Use GzipCompressor*Stream instead of GZIP*Stream. Add compression ratio check to Tar::extartToDir to prevent zip bombs